# my_rust_cms

./: .env.example  .gitignore  Cargo.toml  Diesel.toml  RAYDT-STACK.md  README.md  SECURITY.md  Trunk.toml  index.html  regenerate_promotional_pages.py
backend/: Cargo.toml  test_component.json
backend/backend/uploads/: 58529465-8d16-425d-b38d-3d01d0329ca4.txt  d181e43e-e0cb-4c6b-8fc6-0fe5aaa27ab4.txt
backend/src/: config.rs  database.rs  main.rs  schema.rs
backend/src/controllers/: admin.rs  auth.rs  auth_controller.rs  comments.rs  media.rs  media_controller.rs  mod.rs  navigation.rs  pages.rs  posts.rs  sessions.rs  system.rs  users.rs
backend/src/middleware/: auth.rs  errors.rs  mod.rs  rate_limiting.rs  security_headers.rs  validation.rs
backend/src/models/: category.rs  comment.rs  component.rs  media.rs  mod.rs  navigation.rs  page.rs  post.rs  session.rs  setting.rs  template.rs  user.rs
backend/src/services/: backup_service.rs  file_security.rs  input_sanitization.rs  mod.rs  session_manager.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  main.rs  mod.rs
frontend/src/components/: auth_guard.rs  header.rs  markdown_editor.rs  media_picker.rs  mod.rs  notification.rs  performance_monitor.rs  posts_list_widget.rs  public_layout.rs  sidebar.rs  tabbed_view.rs
frontend/src/components/admin/: header.rs  mod.rs  sidebar.rs
frontend/src/components/page_builder/: drag_drop_builder.rs  mod.rs
frontend/src/pages/: comment_moderation.rs  dashboard.rs  media_library.rs  mod.rs  not_found.rs  page_builder.rs  post_list.rs  user_management.rs
frontend/src/pages/admin/: admin.rs  analytics.rs  comment_moderation.rs  dashboard.rs  design_system.rs  media_library.rs  mod.rs  navigation_manager.rs  page_builder.rs  post_editor.rs  post_list.rs  settings.rs  system_settings.rs  template_manager.rs  user_management.rs
frontend/src/pages/auth/: login.rs  mod.rs
frontend/src/pages/public/: home.rs  mod.rs  not_found.rs  page.rs  post.rs  posts.rs  public_router.rs
frontend/src/services/: api_service.rs  auth_context.rs  auth_service.rs  default_pages.rs  migrate_pages.rs  mod.rs  navigation_service.rs  page_service.rs  performance_service.rs  sample_page_data.rs
frontend/src/styles/: admin.css  design_system.css  enhanced_page_builder.css  main.css  markdown.css  media_library.css  mobile_menu.css  page_builder.css  public.css  template_manager.css
migrations/2025-07-31-154209_add_role_to_users/: up.sql
migrations/2025-07-31-154806_add_status_to_users/: up.sql
migrations/2025-07-31-223330_create_navigation_table/: down.sql  up.sql
migrations/2025-08-02-141916_add_slug_status_to_pages/: down.sql  up.sql
migrations/2025-08-03-154135_enhance_settings_table/: down.sql  up.sql
migrations/2025-08-04-131303_enhance_navigation_for_multi_menus/: down.sql  up.sql
my_rust_cms/: .gitignore  Cargo.toml
my_rust_cms/src/frontend/components/: tabbed_view.rs
my_rust_cms/src/frontend/services/: api_service.rs
src/: lib.rs  main.rs
src/backend/: main.rs  mod.rs  schema.rs
src/backend/config/: config.rs  database.rs  mod.rs
src/backend/controllers/: auth_controller.rs  builder_controller.rs  category_controller.rs  comments_controller.rs  media_controller.rs  mod.rs  posts_controller.rs  settings_controller.rs  users_controller.rs
src/backend/middlewares/: auth_middleware.rs  cors_middleware.rs  logging_middleware.rs  mod.rs
src/backend/models/: category.rs  comment.rs  media.rs  mod.rs  page.rs  post.rs  settings.rs  tag.rs  user.rs
src/backend/repositories/: category_repository.rs  comment_repository.rs  media_repository.rs  mod.rs  page_repository.rs  post_repository.rs  user_repository.rs
src/backend/services/: auth_service.rs  builder_service.rs  comment_service.rs  media_service.rs  mod.rs  post_service.rs  user_service.rs
src/frontend/: main.rs  mod.rs
src/frontend/components/: header.rs  mod.rs  sidebar.rs
src/frontend/pages/: comment_moderation.rs  dashboard.rs  media_library.rs  mod.rs  post_list.rs  user_management.rs
src/frontend/services/: api_service.rs
src/frontend/styles/: main.css
src/shared/: utils.rs
src/tests/: integration_tests.rs  unit_tests.rs
