[package]
name = "my_rust_cms"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yew framework
yew = { version = "0.20", features = ["csr"] }

# Yew Router for client-side routing
yew-router = { version = "0.18" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.2"
serde_json = "1.0"

# WebAssembly bindings
wasm-bindgen = "0.2.87"

# Gloo for networking, console, and storage utilities
gloo-net = "0.3"
gloo-storage = "0.3"
gloo = { version = "0.8", features = ["utils", "net", "storage"] }

# wasm-bindgen-futures for async in WASM
wasm-bindgen-futures = "0.4"

# Testing
wasm-bindgen-test = "0.3.25"

# WASM-specific dependencies
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
log = "0.4"
thiserror = "1.0"
