[package]
name = "my_rust_cms"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["backend", "frontend"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
yew = { version = "0.20", features = ["csr"] }
serde-wasm-bindgen = "0.2"
wasm-bindgen = "0.2.87"
gloo-net = "0.3"
gloo-storage = "0.3"
gloo = { version = "0.8", features = ["utils", "net", "storage"] }
gloo-file = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.25"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console", "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement"] }
js-sys = "0.3"
log = "0.4"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] }
