[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenv = "0.15"
diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2", "serde_json"] }
diesel_migrations = "2.1"
r2d2 = "0.8"
r2d2-diesel = "1.0"
uuid = { workspace = true }
bcrypt = "0.15" 